# b3dkit

./: README.md  build.bat  build.sh  mkdocs.yml  mkdocs_new.yml  pyproject.toml  readthedocs.yaml
docs/: antichamfer.md  ball_socket.md  basic_shapes.md  bolt_fittings.md  click_fit.md  conf.py  dovetail.md  hexwall.md  high_top_slide_box.md  point.md  slide_box.md  twist_snap.md
src/b3dkit/: __init__.py  antichamfer.py  ball_socket.py  basic_shapes.py  bolt_fittings.py  click_fit.py  dovetail.py  hexwall.py  high_top_slide_box.py  point.py  slide_box.py  twist_snap.py
tests/: conftest.py  test_antichamfer.py  test_ball_socket.py  test_basic_shapes.py  test_bolt_fittings.py  test_click_fit.py  test_dovetail.py  test_hexwall.py  test_high_top_slide_box.py  test_point.py  test_slide_box.py  test_twist_snap.py
