[project]
name = "b3dkit"
version = "0.1.2"
authors = [
  { name="x0pherl"},
]
description = "build123d libraries and utilities"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "build123d>=0.10.0",
  "ocp_vscode>=3.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  ]
maintain =[
  "twine>=6.2.0",
  "hatch-vcs>=0.5.0",
  "hatchling>=1.29.0",
  "build>=1.4.0",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "markdown-include>=0.8.1",
]

[project.urls]
Homepage = "https://github.com/x0pherl/b3dkit"
Issues = "https://github.com/x0pherl/b3dkit/issues"
Documentation = "https://b3dkit.readthedocs.org"

[build-system]
requires = ["hatchling>=1.29.0", "hatch-vcs>=0.5.0"]

build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [".venv-1"]

[tool.pytest.ini_options]
markers = [
    "manual: marks tests that can only be executed manually",
]